[gd_scene load_steps=2 format=2]

[ext_resource path="res://src/Lora/LoraSlider.gd" type="Script" id=1]

[node name="LoraSliderHBC" type="HBoxContainer"]
margin_left = -161.0
margin_top = 53.0
margin_right = -121.0
margin_bottom = 93.0
size_flags_horizontal = 3
script = ExtResource( 1 )

[node name="LoraSliderLabel" type="Label" parent="."]
unique_name_in_owner = true
margin_top = 13.0
margin_right = 97.0
margin_bottom = 27.0
text = "Model Strength"

[node name="LoraSlider" type="HSlider" parent="."]
unique_name_in_owner = true
margin_left = 101.0
margin_right = 117.0
margin_bottom = 16.0
size_flags_horizontal = 3
min_value = -2.0
max_value = 5.0
step = 0.01
value = 1.0
tick_count = 10
ticks_on_borders = true

[node name="LoraSliderValue" type="LineEdit" parent="."]
unique_name_in_owner = true
margin_left = 121.0
margin_right = 179.0
margin_bottom = 40.0
text = "1"
max_length = 4

[connection signal="value_changed" from="LoraSlider" to="." method="_on_LoraSlider_value_changed"]
[connection signal="text_entered" from="LoraSliderValue" to="." method="_on_LoraSliderValue_text_entered"]
